# GreenCodeEvaluator

./: .gitignore  README.md  background_profiler.py  cpuusage.py  importresultutils.py  index.html  jsonutils.py  main_profiler.py  memory_profiler_use.py  pyproject.toml  script.js  style.css  unused_code_checker.py
CodeEvaluator_Team_Bertha_Benz/: LICENSE  Makefile  pyproject.toml
CodeEvaluator_Team_Bertha_Benz/experiments/nupur/: demo.py
CodeEvaluator_Team_Bertha_Benz/experiments/praise/: cpuusage.py  importresultutils.py  jsonutils.py
CodeEvaluator_Team_Bertha_Benz/experiments/romaissa/: bad_functions.py  empty_bad_functions.py  psutil_imp.py  scaled_functions.py
CodeEvaluator_Team_Bertha_Benz/frontend/public/: cprotxt.json  cpu_usage.json  mem_prof.txt  sys_info.json  sysinfo.json
CodeEvaluator_Team_Bertha_Benz/frontend/src/: App.css
CodeEvaluator_Team_Bertha_Benz/green_code_evaluator/: main.py
CodeEvaluator_Team_Bertha_Benz/green_code_evaluator/util/: text.py
backend/: FileUpload.py
experiments/nupur/: demo.py  unused_code_checker.py
experiments/romaissa/: jsonutils.py  memory_profiler_use.py
experiments/romaissa/result/: cprof.txt  cprotxt.json  cpu_usage.txt  unused.json  (+1 more)
frontend/: package-lock.json  package.json
frontend/public/: cprotxt.json  cpu.json  cpu_usage.json  index.html  mem_prof.txt  terminal_out.json  unused.json
frontend/src/: App.css  App.js  index.js  index2.html
green_code_evaluator/: __init__.py  __main__.py
green_code_evaluator/commands/: __init__.py  analyze.py
green_code_evaluator/util/: cli.py  json_utils.py
(+29 files in other folders)
